# ICSPrism

./: .gitignore  .gitmodules  README.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
benchmarks/: abort_oracle.st  array_lookup.st  harness_test.st  harness_test_buggy.st  pipeline_controller.st  pump_controller.st  sanity_test.st
harness-test/: Cargo.toml  run.sh
harness-test/.cargo/: config.toml
harness-test/src/: main.rs
icsprism/: Cargo.toml  goexplore-config.toml  prism-fuzz-multi-eg.toml  prism-fuzz.toml  probe_ddg.rs  sequence-config.toml
icsprism/ir-analysis/: Cargo.toml
icsprism/ir-analysis/src/: ddg.rs  harness_gen.rs  layout.rs  lib.rs  main.rs  metadata.rs
icsprism/prism-cov/: Cargo.toml  build.rs
icsprism/prism-cov/src/: main.rs
icsprism/prism-ddg/: Cargo.toml
icsprism/prism-ddg-input/: Cargo.toml  build.rs
icsprism/prism-ddg-input/src/: main.rs
icsprism/prism-ddg-not-dumb/: Cargo.toml
icsprism/prism-ddg-not-dumb/src/: main.rs
icsprism/prism-ddg-state/: Cargo.toml
icsprism/prism-ddg-state/src/: main.rs
icsprism/prism-ddg/src/: main.rs
icsprism/prism-fuzz/: Cargo.toml
icsprism/prism-fuzz/.cargo/: config.toml
icsprism/prism-fuzz/src/: build.rs  main.rs
icsprism/prism-go-explore/: Cargo.toml
icsprism/prism-go-explore/src/: main.rs
icsprism/prism-runtime/: Cargo.toml
icsprism/prism-runtime/src/: lib.rs
icsprism/prism-sanity/: Cargo.toml
icsprism/prism-sanity/src/: main.rs
llvmbc_harnesser/: Cargo.toml
llvmbc_harnesser/src/: ddg_graph.rs  main.rs
scripts/: compile_all.sh  compile_ll_bc.sh  cov_fuzz.sh  ddg_fuzz.sh  ddg_goexplore.sh  ddg_input_fuzz.sh  ddg_not_dumb.sh  ddg_state.sh  single_st_compile_ll_bc.sh  single_st_compile_o_so.sh  stc.sh  stc_fuzz_conf.sh  stc_prism_cov_fuzz  stc_prism_ddg_fuzz  stc_prism_ddg_input_fuzz  stc_then_fuzz.sh
temp/: pipeline_controller.bc  pipeline_controller.ll  pipeline_ctrl_debug.ll  scan_cycle_aircraft_oobr  scan_cycle_aircraft_oobr.bc
tools/: ddg_to_dot.py  probe_ddg.py  probe_ddg_adv.py
tools/ddg/: __main__.py  fields.py  graph.py  io.py  probe.py  probe_adv.py  state_hash.py  to_dot.py  zones.py
tools/ddg_analysis/: ddg_state_hash_heuristics.py  probe_ddg_adv.py  probe_goexplore_zones.py
