[workspace]
resolver = "3"
members = ["ir-analysis", "prism-runtime", "prism-cov", "prism-ddg", "prism-ddg-input", "prism-sanity", "prism-ddg-not-dumb"]

[workspace.dependencies]
inkwell    = { version = "0.7.0", features = ["llvm21-1"] }
petgraph   = "0.6"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
libafl     = "=0.15.4"
libafl_bolts = "=0.15.4"
clap       = { version = "4", features = ["derive"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
panic = "abort"
