[package]
name = "prism-ddg-not-dumb"
version = "0.1.0"
edition = "2024"

[dependencies]
libafl = { version = "=0.15.4" }
libafl_bolts = { version = "=0.15.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
prism-runtime = { path = "../prism-runtime" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
